--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	<meta charset="utf-8" />
 	<meta content='161004527385612' property='fb:page_id'>
 	<link href='http://<%= @host %><%= image_path 'logo_green_square.png' %>' rel='apple-touch-icon-precomposed'>
-	<meta property="og:image" content="='http://<%= @host %><%= image_path 'logo_green_square.png' %>" />
+	<meta property="og:image" content="http://<%= @host %><%= image_path 'logo_green_square.png' %>" />
 	<link data-page-subject="true" href="http://uplaypro.com/" rel="canonical" />
 	<meta content="http://uplaypro.com/" data-page-subject="true" property="og:url" />
 	<meta content="U-PLAY • International University Sports Platform" data-page-subject="true" property="og:title" />
