--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,8 +13,6 @@ $header-text-rendering: auto
 @import "foundation"
 @import "partials/colors"
 
-
-
 @mixin title-font
   font-family: 'Pt Sans Narrow', sans-serif
   letter-spacing: 1px
@@ -69,11 +67,10 @@ h1, h2, h3, h4, h5, h6
         font-weight: normal
 
     .laptop
-      @include background(image-url("portatil.png"))
-      @include background-size(auto, 100%)
-      background-repeat: no-repeat
-      background-position: right center
-      height: 347px
+      text-align: right
+      iframe
+        margin-top: 36px
+        
 
   .main-submit
     margin-top: 1.2em
@@ -213,14 +210,7 @@ body > footer
   background: $BackgroundBlack
   color: white
 
-
-@media only screen and (max-width: 600px)
-  #in-touch .slogan .laptop
-    @include background-size(100%, auto)
 @media only screen and (max-width: 768px)
-  #in-touch .slogan .laptop
-    background-position: center center
-
   #athletes .row section:first-child
     margin-bottom: 2em
   #in-touch
