adds invisible image to drag and drop.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -53,6 +53,11 @@ h1, h2, h3, h4, h5, h6
     @include background(image-url("logotipo.png"))
     height: 77px
     background-repeat: no-repeat
+    img
+      width: auto
+      height: 100%
+      opacity: 0
+      filter: alpha(opacity=0)
 
   .slogan
     header
@@ -70,7 +75,7 @@ h1, h2, h3, h4, h5, h6
       text-align: right
       iframe
         margin-top: 36px
-        
+
 
   .main-submit
     margin-top: 1.2em
