--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -29,7 +29,7 @@
 <div id="in-touch" class="wrapper">
   <section class="row">
   <div class="large-12 columns">
-    <div class="uplay-logo"></div>
+    <div class="uplay-logo"><%= image_tag 'logotipo.png' %></div>
   </div>
   </section>
   <section class="slogan row">
