fixed newsletter meta

--- a/app/views/newsletter/show.html
+++ b/app/views/newsletter/show.html
@@ -8,15 +8,15 @@
     <meta content="University Sports Newsletter • U-PLAY" data-page-subject="true" property="og:title" />
     <meta content="website" data-page-subject="true" property="og:type" />
     <meta content="University Sports Newsletter • U-PLAY" data-page-subject="true" property="og:site_name" />
-    <meta content="Weekly, on your e-mail." data-page-subject="true" name="description" />
+    <meta content="Monthly, on your e-mail." data-page-subject="true" name="description" />
     <meta content="University Sports, Sports, University, Athlete Network, Competition, Planning, Tools, Newsletter, News" data-page-subject="true" name="keywords" />
     <link href="http://uplaypro.com/favicon.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <title>University Sports Newsletter • U-PLAY</title>
   </head>
   <body style="margin: 0px;">
-    <iframe 
-      src="http://uplaypro.us5.list-manage1.com/subscribe?u=19a264d01f96d99adbec09b96&id=3fc35f3f1e" 
-      frameborder="0" 
+    <iframe
+      src="http://uplaypro.us5.list-manage1.com/subscribe?u=19a264d01f96d99adbec09b96&id=3fc35f3f1e"
+      frameborder="0"
       width="100%"
       height="100%"
       scrolling="yes">
