adds about and press kit

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -207,6 +207,10 @@ body > footer
     vertical-align: middle
     a
       color: $GreenA
+  > section:nth-child(2) a
+    padding-right: 1em
+    color: white
+    text-decoration: underline
   img
     float: right
     margin-left: 2em
